--- a/.env
+++ b/.env
@@ -1,12 +1,21 @@
 HOST=127.0.0.1
 PORT=8000
-DBUSER=braquetes
-DBPASSWORD=Dif*137946
-DBNAME=donaciones
-DBHOST=braqueteserver.mysql.database.azure.com
+DBUSER=root
+DBPASSWORD=
+DBNAME=utvco_control_escolar_go
+DBHOST=127.0.0.1
 DBPORT=3306
 DBSSLMODE=false
 DBTIMEZONE=false
+# HOST=127.0.0.1
+# PORT=8000
+# DBUSER=braquetes
+# DBPASSWORD=Dif*137946
+# DBNAME=donaciones
+# DBHOST=braqueteserver.mysql.database.azure.com
+# DBPORT=3306
+# DBSSLMODE=false
+# DBTIMEZONE=false
  
 JWTDBUSER=braquetes
 JWTDBPASSWORD=braquetes21
