alumno sin nada

--- a/.env
+++ b/.env
@@ -7,19 +7,10 @@ DBHOST=127.0.0.1
 DBPORT=3306
 DBSSLMODE=false
 DBTIMEZONE=false
-# HOST=127.0.0.1
-# PORT=8000
-# DBUSER=braquetes
-# DBPASSWORD=Dif*137946
-# DBNAME=donaciones
-# DBHOST=braqueteserver.mysql.database.azure.com
-# DBPORT=3306
-# DBSSLMODE=false
-# DBTIMEZONE=false
- 
-JWTDBUSER=braquetes
-JWTDBPASSWORD=braquetes21
-JWTDBNAME=difoaxaca
+
+JWTDBUSER=user
+JWTDBPASSWORD=pass
+JWTDBNAME=base
 JWTDBHOST=10.0.3.162
 JWTDBPORT=3002
 JWTDBSSLMODE=false
